cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0
author:             Jonathan Strickland
maintainer:         djanatyn@gmail.com

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: GHC2021 GADTs
    build-depends:
        base ^>= 4.17.0.0,
        tasty ^>= 1.4.2.1,
        tasty-hunit ^>= 0.10.0.3
